<resources>
    <string name="app_name">Literature12</string>

    <string name="mode_train">Тренировка</string>
    <string name="mode_test">Изпит</string>
    <string name="mode_collection">Христоматия</string>
    <string name="mode_settings">Настройки</string>
    <string name="mode_results">Резултати</string>
    <string name="mode_favourites">Запазени цитати</string>

    <string name="main_tab_last_opened">Последно разглеждани</string>
    <string name="main_tab_stats">Статистики</string>
    <string name="main_not_enough">Недостатъчна информация, за да се сформира история</string>
    <string name="main_tab_last_results">Последни резултати</string>
    <string name="main_tab_average">Средна\nуспеваемост</string>
    <string name="main_tab_100">100%</string>
    <string name="main_tab_0">0%</string>

    <string name="mode_train_descr">Усъвършенствай уменията си за литература</string>
    <string name="mode_test_descr">Провери знанията си с бързи и забавни тестове</string>
    <string name="mode_collection_descr">Твоето литературно хранилище - винаги под ръка</string>
    <string name="mode_favourites_descr">Бърз достъп до любимите ти пасажи и мисли </string>


    <string name="mode_settings_questions_count">Колко въпроса искаш?</string>
    <string name="mode_settings_questions_content">Кои произведения да включа?</string>

    <string name="mode_test_TITLE_BY_GENRE">Кое от произведенията се определя по жанр като</string>
    <string name="mode_test_GENRE_BY_TITLE">От какъв жанр е творбата</string>
    <string name="mode_test_AUTHOR_BY_TITLE">Кой е авторът на</string>
    <string name="mode_test_TITLE_BY_AUTHOR">Кое от произведенията е написано от</string>
    <string name="mode_test_submit">Предавам</string>

    <string name="toast_needMoreProducst">Нуждая се от поне 4 творби, за да създам тест</string>
    <string name="toast_answerAll">Моля отговори на всички въпроси</string>
    <string name="toast_cantChangeAns">Тестът вече е предаден</string>

    <string name="from">от</string>
    <string name="done">готови</string>
    <string name="correct">верни</string>
    <string name="knew">знаеше</string>
    <string name="wrong">грешни</string>
    <string name="learnt">научи</string>
    <string name="questions">въпроса</string>

    <string name="results_congrats">Поздравления!</string>
    <string name="results_message1">Литературата е твоята сила!</string>
    <string name="results_try_again">Преговори отново:</string>
    <string name="results_already_know">Вече знаеш:</string>
    <string name="results_look_again">Разгледай теста</string>
    <string name="results_look_results">Виж резултатите</string>

    <string name="product_genre">Жанр:</string>
    <string name="product_theme">Тема:</string>
    <string name="product_style">Течение:</string>

    <string name="grade_11">11 клас</string>
    <string name="grade_12">12 клас</string>

    <string name="style_EXPRESSIONISM">експресионизъм</string>
    <string name="style_REALISM">реализъм</string>
    <string name="style_DIABOLISM">диаболизъм</string>
    <string name="style_ROMANTISM">романтизъм</string>
    <string name="style_MODERNISM">модернизъм</string>
    <string name="style_SYMBOLISM">символизъм</string>
    <string name="style_INDIVIDUALISM">индивидуализъм</string>
    <string name="style_EST_INDIVIDUALISM">ест. индивидуализъм</string>

    <string name="theme_LOVE">Любовта</string>
    <string name="theme_HOPE">Вярата и надеждата</string>
    <string name="theme_LABOR">Трудът и творчеството</string>
    <string name="theme_CHOICE">Изборът и раздвоението</string>

    <string name="genre_RAZKAZ">разказ</string>
    <string name="genre_POEMA">поема</string>
    <string name="genre_ELEGIQ">елегия</string>
    <string name="genre_POWEST">повест</string>
    <string name="genre_ROMAN">роман</string>
    <string name="genre_BALADA">балада</string>
    <string name="genre_ODA">ода</string>
    <string name="genre_STIHOTWORENIE">стихотворение</string>

</resources>