<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundKrisi"
    tools:context=".ModeResults">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvMode"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/tvMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="@string/mode_train"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/mode_results"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvMode"
            app:layout_constraintStart_toStartOf="@+id/tvMode"
            app:layout_constraintTop_toBottomOf="@+id/tvMode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/clLookTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edges_medium"
                android:backgroundTint="@color/white">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="171dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/results_congrats"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="24dp"
                    android:text="@string/results_message1"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <View
                    android:id="@+id/view9"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/backgroundKrisi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <LinearLayout
                    android:id="@+id/llTest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/view9">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvQuestionsCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="10"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/round_edges_circle"
                                android:backgroundTint="@color/trainingAccent" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/questions" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view6"
                        android:layout_width="2dp"
                        android:layout_height="60dp"
                        android:background="@color/backgroundKrisi" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvQuestionsCorrect"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="8"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/round_edges_circle"
                                android:backgroundTint="@color/pastel_green" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvCorrectLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/correct" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view7"
                        android:layout_width="2dp"
                        android:layout_height="60dp"
                        android:background="@color/backgroundKrisi" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvQuestionsWrong"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="2"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/round_edges_circle"
                                android:backgroundTint="@color/pastel_red" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvWrongLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/wrong" />
                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:rotation="-90"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/circular"
                    android:indeterminate="false"
                    app:layout_constraintBottom_toTopOf="@+id/view9"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPercent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="70%"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="@+id/progressBar" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/llProdsAgain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:background="@drawable/round_edges_medium"
                android:backgroundTint="@color/white"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/results_try_again"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llProdsKnown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:background="@drawable/round_edges_medium"
                android:backgroundTint="@color/white"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/results_already_know"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLookTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/button_shadow"
            android:layout_marginTop="@dimen/button_shadow"
            android:layout_marginRight="@dimen/button_shadow_minus"
            android:layout_marginBottom="@dimen/button_shadow_minus"
            android:background="@drawable/round_edges_medium"
            android:backgroundTint="@color/testAccent"
            app:layout_constraintBottom_toBottomOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button5"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edges_medium"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            android:text="@string/results_look_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>